--- a/employees-manager-fe/src/app/pages/restricted/timesheet/timesheet-day-modal/timesheet-day-modal.html
+++ b/employees-manager-fe/src/app/pages/restricted/timesheet/timesheet-day-modal/timesheet-day-modal.html
@@ -111,8 +111,19 @@
             <ng-container matColumnDef="actionMenu">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element; let index = index">
-                    <mat-icon style="cursor: pointer;" [matMenuTriggerFor]="activitiesMenu"
-                        [matMenuTriggerData]="{ row: element, index: index }">more_vert</mat-icon>
+                    <mat-icon style="cursor: pointer;" matTooltip="Edit" (click)="startEditActivityRow(element)"
+                        *ngIf="activityUnderEdit === null"><mat-icon>edit</mat-icon>
+                    </mat-icon>
+                    <button mat-icon-button style="cursor: pointer;" matTooltip="Confirm"
+                        (click)="confirmEditActivityRow(element, index)" [disabled]="editActivityForm.invalid"
+                        *ngIf="activityUnderEdit === element.activityId"><mat-icon>save</mat-icon>
+                    </button>
+                    <mat-icon style="cursor: pointer;" matTooltip="Cancel" (click)="cancelEditActivityRow(element)"
+                        *ngIf="activityUnderEdit === element.activityId"><mat-icon>close</mat-icon>
+                    </mat-icon>
+                    <mat-icon style="cursor: pointer;" matTooltip="Delete" (click)="deleteActivityRow(element, index)"
+                        *ngIf="activityUnderEdit === null"><mat-icon>delete</mat-icon>
+                    </mat-icon>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedActivitiesColumns" class="timesheet-day-header-row">
@@ -121,25 +132,6 @@
         </table>
     </form>
 
-    <mat-menu #activitiesMenu="matMenu">
-        <ng-template matMenuContent let-row="row" let-index="index">
-            <button mat-menu-item (click)="startEditActivityRow(row)"
-                *ngIf="activityUnderEdit === null"><mat-icon>edit</mat-icon>Edit
-                activity
-            </button>
-            <button mat-menu-item (click)="confirmEditActivityRow(row, index)"
-                *ngIf="activityUnderEdit === row.activityId"
-                [disabled]="editActivityForm.invalid"><mat-icon>save</mat-icon>Confirm
-            </button>
-            <button mat-menu-item (click)="cancelEditActivityRow(row)"
-                *ngIf="activityUnderEdit === row.activityId"><mat-icon>close</mat-icon>Cancel
-            </button>
-            <button mat-menu-item (click)="deleteActivityRow(row, index)"
-                *ngIf="activityUnderEdit === null"><mat-icon>delete</mat-icon>Delete
-                activity
-            </button>
-        </ng-template>
-    </mat-menu>
     <div class="timesheet-error-message" *ngIf="!hoursLessThanNine()">
         The sum of hours cannot be greater than 8.
     </div>
