--- a/employees-manager-fe/src/app/pages/restricted/admin/admin.scss
+++ b/employees-manager-fe/src/app/pages/restricted/admin/admin.scss
@@ -43,7 +43,7 @@
   }
 }
 
-.users {
+.admin-section-container {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -52,20 +52,20 @@
     font-size: 14px;
   }
 
-  .users-filter-component {
+  .admin-filter-component {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: left;
     gap: 1rem;
 
-    .users-filter-label {
+    .admin-filter-label {
       color: $themePrimary;
       font-size: 1rem;
     }
   }
 
-  .users-header-row {
+  .admin-header-row {
     color: $themePrimary;
     font-weight: bold;
     font-size: 1rem;
@@ -90,14 +90,15 @@
   padding-left: 32px;
 }
 
-.set-password-menu {
+.admin-internal-menu {
   min-width: 30rem !important;
   max-width: 40rem !important;
 }
 
-.set-password-form-container {
+.admin-internal-menu-form-container {
   margin-top: 0.5;
   padding: 0.125rem 1rem 0.125rem 1rem;
+  gap: 0.5rem;
   display: flex;
   flex-direction: column;
 }
